# test

./: .gitignore  CMakeLists.txt  README.md  lldb_formatters.py
src/cminusfc/: cminusf_builder.cpp
src/common/: ast.cpp
src/parser/: lex.yy.c  lexical_analyzer.l  syntax_analyzer.y
src/passes/: Dominators.cpp  LICM.cpp  LoopDetection.cpp  Mem2Reg.cpp
tests/2-ir-gen/autogen/: eval_lab2.py
tests/2-ir-gen/autogen/testcases/lv1/: assign_int_array_local.cminus.ll
tests/2-ir-gen/warmup/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/2-ir-gen/warmup/stu_ll/: assign_hand.ll  fun_hand.ll  if_hand.ll  while_hand.ll
tests/4-opt/: CMakeLists.txt
